Write checkpoint format 3 with cached island payloads and refuse older formats
FluidFormat 3 is one NBT compound: the world epoch, the checksummed ledger
of buffered transfers, pending material and modules, and one compound per
island with its identity, revision, clock, certificate base (or the awake
sentinel) with the certificate's fields and signature, and an opaque,
checksummed payload of its graph, anchor, last solved interval, allowance,
fences and status. A certified island's payload records its certificate
base and the interval's starting graph, so it does not change while the
island stays certified: FluidSavedData caches payloads per island on
revision and payload generation and copies them into every save. Loading
materialises a certified island from its base to the saved committed tick
without a solve. An envelope digest covers every scalar field, the ledger
and every payload digest. The size bound stays 64 MiB.

Load validates the new fields: an awake sentinel or a base no later than
the committed tick, a horizon no earlier than it, an interval that ends at
the base and matches its result, finite deltas, fences no earlier than the
committed tick, islands no later than the epoch, the topology at the
epoch. Formats 1 and 2 are refused with the instruction to create a fresh
world; the version-1 solids upgrade, the absent-field defaults and the
energy-datum migration, which read only those formats, are removed with
their legacy tests. Tests run the cache with verification: every copied
payload is compared with a fresh encoding.

FluidCheckpointFormatTest replaces FluidSaveCompatibilityTest: round trips
of clocks, material, fences, pending events, modules and certificates;
every invalid certificate field refused; restDetection=false and each
signature part discarding with the inventory kept; payload reuse counted;
1,000 certified islands loading without a solve until their horizon; a
save during a hold restarting awake and requalifying. The archived
gameplay s